--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
-        <button type="button">Click me</button>
+        <button type="button" onclick="clickMe()">Clica.ai</button>
+        <h3 id="thanks" onclick="redirecionar()">Clica.ai</h3>
+        <h3 id="mousemover" onmouseover="trocarTexto(this)" onmouseout="voltar(this)">Clica.ai</h3>
     </body>
 </html>
